Add FE regiser and login, add middleware, add automatic API methods generation

--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -3,25 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "npx tsx openapi-ts.ts && dotenv -e .env -- next dev --turbopack",
+    "build": "npx tsx openapi-ts.ts && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "generate": "npx tsx openapi-ts.ts"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@hey-api/openapi-ts": "0.81.1",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
